# boom

./: index.html  pyproject.toml  requirements.txt
boom/: manage.py
boom/boom/: asgi.py  settings.py  urls.py  wsgi.py
boom/game/templates/game/: index.html
boomsite/: manage.py
boomsite/boom/: models.py  urls.py  views.py
boomsite/boom/migrations/: 0001_initial.py  0002_game_stage_number.py
boomsite/boom/templates/boom/: base.html  game.html  round.html  stats.html
boomsite/boomsite/: asgi.py  settings.py  urls.py  wsgi.py
