[tool.poetry]
name = "boom"
version = "0.1.0"
description = ""
authors = ["Alexander Myltsev <a.myltsev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
